change in sidebar nav linking

--- a/html/dbt-services/dbt-nrm.html
+++ b/html/dbt-services/dbt-nrm.html
@@ -9,9 +9,7 @@
     />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <title>PoCRA GIS Dashboard</title>
-    <!--  -->
-    <!-- <base href="" /> -->
+    <title>PoCRA GIS Dashboard</title>    
     <!-- Favicon for page -->
     <link rel="icon" type="image/x-icon" href="../../assets/logo/favicon.ico" />
     <!-- JQuery and Bootstrap -->
@@ -308,25 +306,13 @@
               </div>
               <!-- Project Report Pages -->
               <div class="report-pages">
-                <a class="nav-link fnt-bold" href="../../project-reports.html">
+                <a class="nav-link fnt-bold" href="../report-services/project-reports.html">
                   <div class="sb-nav-link-icon">
                     <!-- <i class="fas fa-chart-area"></i> -->
                     <i class="fa-solid fa-magnifying-glass-chart"></i>
                   </div>
                   Project Reports
-                </a>
-                <a class="nav-link" href="../../charts.html">
-                  <div class="sb-nav-link-icon">
-                    <i class="fas fa-chart-area"></i>
-                  </div>
-                  Charts
-                </a>
-                <a class="nav-link" href="../../tables.html">
-                  <div class="sb-nav-link-icon">
-                    <i class="fas fa-table"></i>
-                  </div>
-                  Tables
-                </a>
+                </a>                
               </div>
             </div>
           </div>
@@ -340,7 +326,7 @@
       <div id="layoutSidenav_content">
         <main>
           <div class="container-fluid px-4">
-            <h5 class="mt-4">DBT- NRM Dashboard</h5>
+            <h4 class="mt-4 fnt-bold">DBT- NRM Dashboard</h4>
             <!-- Selection Menu -->
             <div class="accordion mb-4" id="accordionSelectionMenu">
               <div class="accordion-item">
@@ -723,8 +709,8 @@
   <!-- Adding OpenLayer Extention -->
   <script src="../../libs/ol-ext/ol-ext.js"></script>
   <!-- Internal JS file -->
-  <script src="../../js/api-services-js/pocra-gis-api.js"></script>
-  <!-- <script src="../../js/dbt-service-js/pocra-dbt-api.js"></script> -->
+  <script src="../../js/api-services-js/pocra-gis-api.js"></script>  
+  <!-- DBT-NRM JS file -->
   <script src="../../js/dbt-service-js/pocra-dbt-nrm-service.js"></script>
   <!-- Active js -->
   <script src="../../js/sidebarToggle.js"></script>
