--- a/html/map-services/map-export-map.html
+++ b/html/map-services/map-export-map.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
     <meta name="description" content="" />
     <meta name="author" content="" />
     <title>PoCRA GIS Dashboard</title>
     <!--  -->
+    <!-- <base href="" /> -->
     <!-- Favicon for page -->
     <link rel="icon" type="image/x-icon" href="../../assets/logo/favicon.ico" />
     <!-- JQuery and Bootstrap -->
@@ -24,6 +29,12 @@
     <!-- Custom CSS file -->
     <link href="../../css/customBootstrap.css" rel="stylesheet" />
     <link href="../../css/styles.css" rel="stylesheet" />
+    <!-- All functions of bootstrap are declared in custom styles.css, so no need to call additonal bootstrap.css -->
+    <link
+      href="../../libs/select2-4.0.6/css/select2.min.css"
+      rel="stylesheet"
+    />
+    <script src="../../libs/select2-4.0.6/js/select2.min.js"></script>
   </head>
   <body class="sb-nav-fixed">
     <nav class="sb-topnav navbar navbar-expand navbar-light bg-light">
@@ -96,18 +107,17 @@
         <nav class="sb-sidenav accordion sb-sidenav-dark" id="sidenavAccordion">
           <div class="sb-sidenav-menu">
             <div class="nav">
-              <div class="sb-sidenav-menu-heading">Core</div>
-              <a class="nav-link" href="../../index.html">
+              <div class="sb-sidenav-menu-heading">PoCRA Activities</div>
+              <a class="nav-link fnt-bold" href="../../index.html">
                 <div class="sb-nav-link-icon">
                   <i class="fas fa-tachometer-alt"></i>
                 </div>
                 Dashboard
               </a>
               <!-- DBT Pages -->
-              <div class="dbt-pages">
-                <div class="sb-sidenav-menu-heading">DBT</div>
+              <div class="dbt-pages">                
                 <a
-                  class="nav-link collapsed"
+                  class="nav-link collapsed fnt-bold"
                   href="#"
                   data-bs-toggle="collapse"
                   data-bs-target="#collapseLayouts-DBT"
@@ -129,8 +139,9 @@
                   data-bs-parent="#sidenavAccordion"
                 >
                   <nav class="sb-sidenav-menu-nested nav">
-                    <!-- 
-                      <a class="nav-link" href="../dbt-services/dbt-farmer.html"
+                    <!-- <a
+                      class="nav-link"
+                      href="./dbt-farmer.html"
                     > -->
                     <a
                       class="nav-link"
@@ -159,9 +170,8 @@
               </div>
               <!-- Weather Pages -->
               <div class="weather-pages">
-                <div class="sb-sidenav-menu-heading">Weather</div>
                 <a
-                  class="nav-link collapsed"
+                  class="nav-link collapsed fnt-bold"
                   href="#"
                   data-bs-toggle="collapse"
                   data-bs-target="#collapseLayouts-weather"
@@ -206,9 +216,8 @@
               </div>
               <!-- Soil Pages -->
               <div class="soil-pages">
-                <div class="sb-sidenav-menu-heading">Soil</div>
                 <a
-                  class="nav-link collapsed"
+                  class="nav-link collapsed fnt-bold"
                   href="#"
                   data-bs-toggle="collapse"
                   data-bs-target="#collapseLayouts-soil"
@@ -244,9 +253,8 @@
               </div>
               <!-- Make My Map Pages -->
               <div class="make-my-map-pages">
-                <div class="sb-sidenav-menu-heading">Make My Map</div>
                 <a
-                  class="nav-link collapsed"
+                  class="nav-link collapsed fnt-bold"
                   href="#"
                   data-bs-toggle="collapse"
                   data-bs-target="#collapseLayouts-make-map"
@@ -281,26 +289,13 @@
                 </div>
               </div>
               <!-- Project Report Pages -->
-              <div class="report-pages">
-                <div class="sb-sidenav-menu-heading">Other Reports</div>
-                <a class="nav-link" href="../../project-reports.html">
+              <div class="report-pages">                
+                <a class="nav-link fnt-bold" href="../report-services/project-reports.html">
                   <div class="sb-nav-link-icon">
                     <!-- <i class="fas fa-chart-area"></i> -->
                     <i class="fa-solid fa-magnifying-glass-chart"></i>
                   </div>
                   Project Reports
-                </a>
-                <a class="nav-link" href="../../charts.html">
-                  <div class="sb-nav-link-icon">
-                    <i class="fas fa-chart-area"></i>
-                  </div>
-                  Charts
-                </a>
-                <a class="nav-link" href="../../tables.html">
-                  <div class="sb-nav-link-icon">
-                    <i class="fas fa-table"></i>
-                  </div>
-                  Tables
                 </a>
               </div>
             </div>
@@ -311,10 +306,11 @@
           </div>
         </nav>
       </div>
+
       <div id="layoutSidenav_content">
         <main>
           <div class="container-fluid px-4">
-            <h5 class="mt-4">Export Map</h5>
+            <h4 class="mt-4 fnt-bold">Export Map</h4>
             <!-- Selection Menu -->
             <div class="accordion mb-4" id="accordionSelectionMenu">
               <div class="accordion-item">
@@ -343,7 +339,7 @@
                       <!-- District Dropdown -->
                       <div class="col-xl-3 col-md-6">
                         <select
-                          class="form-select cursor-pointer district"
+                          class="form-select cursor-pointer district select2"
                           aria-label="Select District"
                           id="select-district"
                           data-placeholder="--- Select District ---"
@@ -355,7 +351,7 @@
                       <!-- Taluka Dropdown -->
                       <div class="col-xl-3 col-md-6">
                         <select
-                          class="form-select cursor-pointer taluka"
+                          class="form-select cursor-pointer taluka select2"
                           aria-label="Select Taluka"
                           id="select-taluka"
                           onchange="loadVillages();"
@@ -366,7 +362,7 @@
                       <!-- Village Dropdown -->
                       <div class="col-xl-3 col-md-6">
                         <select
-                          class="form-select cursor-pointer village"
+                          class="form-select cursor-pointer village select2"
                           aria-label="Select Village"
                           id="select-village"
                           onchange="getVillage();"
@@ -379,6 +375,7 @@
                 </div>
               </div>
             </div>
+
             <!-- Map Div -->
             <div class="card mb-4">
               <div class="card-header" id="card-title">
@@ -388,7 +385,6 @@
               <div id="pocra-map-export-map" class="weather-forecast-map"></div>
             </div>
           </div>
-
           <!-- Loader Animation -->
           <div id="layer-loader"></div>
         </main>
@@ -424,14 +420,15 @@
   <script src="../../libs/ol/dist/ol.js"></script>
   <!-- Adding OpenLayer Extention -->
   <script src="../../libs/ol-ext/ol-ext.js"></script>
-  <!-- Active js -->
-  <script src="../../js/sidebarToggle.js"></script>
-  <!--  -->
-  <!-- constant services -->
+  <!-- Internal JS file -->
   <script src="../../js/api-services-js/pocra-gis-api.js"></script>
   <!-- Map-Export JS file -->
   <script src="../../js/map-service-js/map-service.js"></script>
+  <!-- Active js -->
+  <script src="../../js/sidebarToggle.js"></script>
+  <script src="../../js/openLayerCustom.js"></script>
   <script>
     window.onload = loadDistricts();
+    $(".select2").select2();
   </script>
 </html>
